# nebula

./: .env.production  .gitignore  index.html  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  routes_auth.py  routes_dms.py  routes_files.py  routes_friends.py  routes_messages.py  routes_servers.py  routes_ws.py  schemas.py  utils.py  ws_hub.py
src/: App.tsx  AuthScreen.tsx  CallOverlay.tsx  FriendsScreen.tsx  api.ts  call.ts  data.ts  index.css  store.ts  types.ts
src/designs/: Design1.tsx  Design2.tsx  Design3.tsx  Design4.tsx  Design5.tsx
