[project]
name = "nebula-backend"
version = "0.1.0"
description = "Nebula chat backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "pydantic[email]>=2.9.0",
    "aiosqlite>=0.20.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
